--- a/src/index.html
+++ b/src/index.html
@@ -5,4 +5,7 @@
     <title>2048 Game</title>
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
   </head>
+  <body>
+    <div id="gameBoard"></div>
+  </body>
 </html>
