--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>2048 Game</title>
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+    <link rel="stylesheet" href="style.css">
+    <script src="js/main.js" type="module"></script>
   </head>
   <body>
     <div id="gameBoard"></div>
