Rename game board

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,6 @@
     <script src="js/main.js" type="module"></script>
   </head>
   <body>
-    <div id="gameBoard"></div>
+    <div id="game-board"></div>
   </body>
 </html>
